--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,13 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.1",
     "react-spring": "^9.5.5",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "sass": "^1.56.1",
+    "slick-carousel": "^1.8.1",
     "thunk": "^0.0.1",
     "web-vitals": "^2.1.4"
   },
