--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,8 @@
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.3",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
